# lua_vm

./: CMakeLists.txt  LuaState.cpp  LuaState.h  LuaValue.cpp  LuaValue.h  Readme.md  consts.h  luaStack.cpp  luaStack.h  main.cpp  utils.cpp  utils.h
arithmetic/: number.cpp  number.h
binchunk/: BinaryChunk.cpp  BinaryChunk.h
example/: for-loop.out
lua_state/: LuaState.cpp  LuaState.h  Operator.cpp  Operator.h
opcode/: Instruction.cpp  Instruction.h  opcode.h
opcode/instructions/: misc.cpp  misc.h
reader/: Reader.cpp  Reader.h  print.cpp  print.h
